archived-docs/versions/v2.10/modules/en/pages/cluster-deployment/set-up-cloud-providers/configure-in-tree-vsphere.adoc
= Setting Up an In-tree VMware vSphere Cloud Provider
:page-languages: [en, zh]
:revdate: 2024-12-13
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-cloud-providers/configure-in-tree-vsphere.adoc 
:product-path: cluster-deployment/set-up-cloud-providers/configure-in-tree-vsphere.adoc

To set up the in-tree VMware vSphere cloud provider, follow these steps while creating the vSphere cluster in Rancher:

. Set *Cloud Provider* option to `Custom` or `Custom (In-Tree)`.
. Click on *Edit as YAML*
. Insert the following structure to the pre-populated cluster YAML. This structure must be placed under `rancher_kubernetes_engine_config`. Note that the `name` _must_ be set to `vsphere`.
+
[,yaml]
----
 rancher_kubernetes_engine_config:
   cloud_provider:
       name: vsphere
       vsphereCloudProvider:
           [Insert provider configuration]
----

Rancher uses RKE (the Rancher Kubernetes Engine) to provision Kubernetes clusters. Refer to the https://rancher.com/docs/rke/latest/en/config-options/cloud-providers/vsphere/config-reference/[vSphere configuration reference in the RKE documentation] for details about the properties of the `vsphereCloudProvider` directive.
